<resources>
    <string name="app_name">Hold\'em</string>
    <string name="home_play_action">Play</string>
    <string name="home_options_action">Options</string>
    <string name="home_about_action">About</string>
    <string name="about_title">About</string>
    <string name="about_license_title">License</string>
    <string name="about_license_subtitle">Affero General Public License Version 3 (AGPL-3.0)</string>
    <string name="about_third_party_title">Third party components</string>
    <string name="options_title">Options</string>
    <string name="play_connect_title">Connect</string>
    <string name="play_connect_url_input_hint">Server URL</string>
    <string name="play_connect_name_input_hint">Nickname</string>
    <string name="play_disconnect_title">Disconnect</string>
    <string name="play_disconnect_message">Are you sure you want to disconnect from this server?</string>
    <string name="play_host_title">Host</string>
    <string name="play_host_message">This feature is not yet available.</string>
    <string name="play_join_title">Join room</string>
    <string name="play_join_id_input_hint">Enter Room ID here</string>
    <string name="play_leave_title">Leave</string>
    <string name="play_leave_message">Are you sure you want to leave this room?</string>
    <string name="play_message_title">Message</string>
    <string name="play_room_create_action">Create room</string>
    <string name="play_room_join_action">Join room</string>
    <string name="play_server_connect_action">Connect to game</string>
    <string name="play_server_host_action">Host own game</string>
    <string name="play_table_fold_action">Fold</string>
    <string name="play_table_check_action">Check</string>
    <string name="play_table_call_action">Call</string>
    <string name="play_table_bet_action">Bet</string>
    <string name="play_table_raise_action">Raise</string>
    <string name="play_table_allin_action">All In</string>
    <string name="play_table_start_action">Start</string>
    <string name="play_server_title">Play</string>
    <string name="play_room_title">Server</string>
    <string name="play_table_title">Room</string>
    <string name="play_options_edit_name_action">Default nickname</string>
    <string name="play_options_edit_server_action">Default server</string>
    <string name="options_name_title">Nickname</string>
    <string name="options_name_input_hint">Nickname</string>
    <string name="options_server_input_hint">Server URL</string>
    <string name="options_server_title">Server</string>
</resources>