<?xml version="1.0" encoding="utf-8"?>
<dev.kobalt.holdem.android.view.StackView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <dev.kobalt.holdem.android.view.StackView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_a50"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <dev.kobalt.holdem.android.view.ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_cards_playing_24" />

        <dev.kobalt.holdem.android.view.LabelView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </dev.kobalt.holdem.android.view.StackView>

    <dev.kobalt.holdem.android.view.LargeImageLabelButtonView
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        app:iconImage="@drawable/ic_baseline_play_arrow_24"
        app:titleLabel="@string/home_play_action" />

    <dev.kobalt.holdem.android.view.LargeImageLabelButtonView
        android:id="@+id/optionsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        app:iconImage="@drawable/ic_baseline_settings_24"
        app:titleLabel="@string/home_options_action" />

    <dev.kobalt.holdem.android.view.LargeImageLabelButtonView
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:iconImage="@drawable/ic_baseline_info_24"
        app:titleLabel="@string/home_about_action" />

</dev.kobalt.holdem.android.view.StackView>